--- a/UserManagement.properties
+++ b/UserManagement.properties
@@ -1,6 +1,6 @@
 
 server.port=8081
-spring.data.mongodb.uri = mongodb://root:root@localhost:27017/
-spring.data.mongodb.database= UserRegistration
+spring.data.mongodb.uri = mongodb://root:root@localhost:27017
+spring.data.mongodb.database= user
 spring.datasource.name=root
 spring.datasource.data-password=root
