--- a/moviemanagement.properties
+++ b/moviemanagement.properties
@@ -1,2 +1,5 @@
-
 server.port=8083
+spring.data.mongodb.uri = mongodb://root:root@localhost:27017
+spring.data.mongodb.database= movies
+spring.datasource.name=root
+spring.datasource.data-password=root
