--- a/UserManager.properties
+++ b/UserManager.properties
@@ -1,6 +1,6 @@
 
 server.port=8081
 spring.data.mongodb.uri = mongodb://root:root@localhost:27017
-spring.data.mongodb.database= user
+spring.data.mongodb.database= users
 spring.datasource.name=root
 spring.datasource.data-password=root
