--- a/UserManager.properties
+++ b/UserManager.properties
@@ -4,3 +4,9 @@ spring.data.mongodb.uri = mongodb://root:root@localhost:27017
 spring.data.mongodb.database= users
 spring.datasource.name=root
 spring.datasource.data-password=root
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=vijay.sharmaftechiz@gmail.com
+spring.mail.password= xperiaxa1plus
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
