--- a/UserManager.properties
+++ b/UserManager.properties
@@ -10,3 +10,4 @@ spring.mail.username=vijay.sharmaftechiz@gmail.com
 spring.mail.password= xperiaxa1plus
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
+spring.mail.properties.mail.smtp.starttls.required=true
