--- a/UserManager.properties
+++ b/UserManager.properties
@@ -7,7 +7,7 @@ spring.datasource.data-password=root
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
 spring.mail.username=vijay.sharmaftechiz@gmail.com
-spring.mail.password= xperiaxa1plus
+spring.mail.password= passwordhelloworld@123
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
 spring.mail.properties.mail.smtp.starttls.required=true
