--- a/ticketmanagement.properties
+++ b/ticketmanagement.properties
@@ -2,6 +2,6 @@ server.port=8084
 spring.data.mongodb.host=localhost
 spring.data.mongodb.port=27017
 spring.data.mongodb.username=root
-spring.data.mongodb.password=example
+spring.data.mongodb.password=root
 spring.data.mongodb.database=ticket-manager
 spring.data.mongodb.authentication-database=admin
